kubernetes/system/cloudbeaver/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    name: cloudbeaver
    pod-security.kubernetes.io/enforce: privileged
