kubernetes/system/cloudbeaver/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:24.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8978
          livenessProbe:
            httpGet:
              path: /
              port: 8978
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8978
            initialDelaySeconds: 40
            periodSeconds: 10
          volumeMounts:
            - name: dbeaver-product
              mountPath: /opt/cloudbeaver/conf/product.conf
              subPath: product.conf
            - name: dbeaver-server
              mountPath: /opt/cloudbeaver/conf/cloudbeaver.conf
              subPath: cloudbeaver.conf
      volumes:
        - name: dbeaver-product
          configMap:
            name: dbeaver-product-configmap
        - name: dbeaver-server
          configMap:
            name: dbeaver-server-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver-svc
  namespace: cloudbeaver
spec:
  clusterIP: None
  selector:
    app: cloudbeaver
  ports:
    - protocol: TCP
      port: 8978
