kubernetes/system/cloudbeaver/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-cloudbeaver
  namespace: cloudbeaver
spec:
  parentRefs:
  - name: external-gateway
    namespace: networking
  hostnames:
    - "cloudbeaver.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cloudbeaver-svc
      port: 80
